--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,3 +5,11 @@
 h1 {
     font-size: 150px;
 }
+
+.headerbar {
+    background-color: #9fcc24
+}
+
+.headerPersonIcon {
+    background-color: #ffff;
+}
