--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,68 @@
   font-size: large;
 }
 
+.docHolder {
+  text-align: center;
+  width: 700px ;
+  margin-left: auto ;
+  margin-right: auto ;
+  /* display: inline-block;  */
+
+}
+
+.splashbutton{
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 300px; 
+}
+/* .meme-img {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #eeeeee;
+  overflow: hidden;
+} */
+
+.meme-img img {
+  max-height: calc(100vh - 220px);
+  width: 100%;
+}
+
+.center-div
+{
+     margin: 0 auto;
+     width: 100px; 
+}
+
+.splash img {
+
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px; 
+  margin-bottom: auto; 
+  display: block;
+  width: 400px;
+  height: 180px;
+
+}
+
+.splash button {
+  margin-left: auto;
+  margin-right: auto;
+ 
+  display: block;
+}
+
+.splash {
+  width: 100%; 
+  height: 100%;
+  position: absolute; top: 0; right: 0; bottom: 0; left: 0;
+  /* background-color: #4152b3; */
+  margin: 0 auto;
+  
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
