--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,12 @@
   margin: 0 auto;
   
 }
+
+.fab {
+  position: 'absolute';
+  bottom:  60px;
+  right:  60px;
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
